[tool.poetry]
name = "nephelaiio.heartbeat"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
netaddr = "^0.9.0"
ansible-lint = { version = "^6.21.1", markers = "platform_system != 'Windows'" }
ansible = "^8.5.0"
ansible-compat = "^4.1.10"
molecule = "^6.0.2"
molecule-plugins = "^23.5.0"
docker = "^6.1.3"
yamllint = "^1.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
