[project]
name = "nephelaiio-heartbeat"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ansible>=11.5.0",
  "ansible-lint>=25.8.2",
  "molecule-plugins[docker,podman]>=25.8.12",
  "netaddr>=1.3.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 160
